# little-weirdo

./: .gitignore  Cargo.toml  README.md  build.sh  build_run_app.sh  bundler.toml  patch.p
.github/workflows/: rust.yml
benches/: synth_benchmark.rs
data/soundbank_0/src/: wav1.lwt  wav2.lwt  wav3.lwt  wav4.lwt  wav5.lwt  wav6.lwt  wav7.lwt  wav8.lwt
docs/: design_document.adoc  generate_pdf.sh  idea.md  little_weirdo_synth_design.adoc  patch.adoc  synth_design.plantuml
examples/: boxed_wavetables.rs  create_note_to_freq_table.rs  create_wave_table.rs  env_test.rs  generate_soundbanks.rs  lfo_test.rs  little_weirdo_example.rs  little_weirdo_generate_soundbanks.rs  little_weirdo_json_to_postcard.rs  little_weirdo_patch_tester.rs  little_weirdo_streaming_audio_with_midi.rs  midi-rtp.rs  osc_test.rs  patch_test.rs  soundbank.rs  streaming-synth-rtp-midi.rs  streaming-synth.rs  test.rs  test_filter.rs  test_patch_save.rs  wavetable_freq_lookup.rs  wavetable_load_test.rs
examples/patches/: README.md  bass.json  bass.lwp  ebass.json  ebass.m4a  piano.json  piano.lwp  raw_square.json  supersaw_4_oscillators.json
examples/patches/schema/: lw_patch.json
examples/soundbank/soundbank_pure_elektro/src/: README.md
examples/waveforms/: wav9.lwt
plugin/lttl_squeaky/: Cargo.toml  README.md
plugin/lttl_squeaky/src/: lib.rs  main.rs
src/: lib.rs  synth.rs
src/synth/: effect.rs  envelope.rs  filter.rs  math.rs  mixer.rs  oscillator.rs  patch.rs  router.rs  sampler.rs  wavetable_oscillator.rs
src/synth/data/: frequencies.rs  mod.rs  wavetables.rs
src/synth/effects/: bitcrunch.rs  filter.rs  mod.rs  overdrive.rs
src/synth/patches/: mod.rs
tests/: patch_tests.rs
