[package]
name = "little_weirdo"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "plugin/lttl_squeaky",
    "plugin/lttl_squeaky/xtask",
]


[lib]
name = "little_weirdo"

[dependencies]
array-init = "2.1.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
postcard = "1.0.0"

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.217", default-features = false }



[dev-dependencies]
pitch_calc = "0.12.0"
hound = "3.5.1"
cpal = "0.15.3"
anyhow = "1.0.93"
clap = { version = "4.0", features = ["derive"] }
console = "0.15.8"
midir = "0.10.1"
midi-control = "0.2.2"
rtp-rs = "0.6.0"
little-weirdo-soundbanks = { path = "../little-weirdo-soundbanks" }


[[example]] 
name = "streaming-synth"
