[package]
name = "little_weirdo"
version = "0.1.0"
edition = "2021"
authors = ["Daniël <daniel@hi-squeaky-things.nl>"]
description = "A Rust #no-std optimized wave table synthesizer for embedded devices."
license = "MIT"
repository = "https://github.com/hi-squeaky-things/little-weirdo"
keywords = ["no-std", "synthesizer", "wavetable"]
categories = ["embedded"]

[workspace]
resolver = "2"

[lib]
name = "little_weirdo"

[dependencies]
array-init = "2.1.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.228", default-features = false }
postcard = "1.1.3"

[dev-dependencies]
hound = "3.5.1"
cpal = "0.16.0"
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
midir = "0.10.2"
midi-control = "0.2.3"
serde_json = "1.0.0"
criterion = "0.7.0"

[[bench]]
name = "synth_benchmark"
harness = false